--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,9 @@ h5 {
   font-family: 'Russo One', sans-serif;
   color: #23293B;
 }
+h1 {
+  font-size: 3.8rem;
+}
 h2 {
   font-size: 3.2rem;
 }
@@ -159,6 +162,10 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+h1 {
+  text-align: center;
+  padding: 15px;
 }
 footer {
   color: #22283B;
