--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,3 +4,9 @@ h1 {
     text-align: center;
     padding: 15px;
 }
+
+nav {
+    a:link, a:visited, a:hover, a:active {
+        .nav-anchor-text();
+    }
+}
