--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,12 @@ h1 {
 }
 
 nav {
+    max-width: 800px;
+    width: 100%;
+    //margin: 0 auto; 
+    margin: auto;
+    text-align: center;
+
     a:link, a:visited, a:hover, a:active {
         .nav-anchor-text();
     }
