--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,12 @@ h1 {
   text-align: center;
   padding: 15px;
 }
+nav {
+  max-width: 800px;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
 nav a:link,
 nav a:visited,
 nav a:hover,
