--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,11 +6,12 @@ h1 {
 }
 
 nav {
-    max-width: 800px;
-    width: 100%;
+    //max-width: 800px;
+    //width: 100%;
     //margin: 0 auto; 
-    margin: auto;
-    text-align: center;
+    //margin: auto;
+    //text-align: center;
+    .nav-styling();
 
     a:link, a:visited, a:hover, a:active {
         .nav-anchor-text();
