--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,12 @@
   text-decoration: none;
   color: #5E6164;
 }
+.nav-styling {
+  max-width: 800px;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
