--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,3 +10,11 @@
     text-decoration: none;
     color: @main-font-color;
 }
+
+.nav-styling {
+    max-width: 800px;
+    width: 100%;
+    //margin: 0 auto; 
+    margin: auto;
+    text-align: center;
+}
