spacing the links at header

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,12 +9,12 @@
     .generic-text();
     text-decoration: none;
     color: @main-font-color;
+    margin: 15px;
 }
 
 .nav-styling {
     max-width: 800px;
     width: 100%;
-    //margin: 0 auto; 
     margin: auto;
     text-align: center;
 }
