--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
   line-height: 1.4;
   text-decoration: none;
   color: #5E6164;
+  margin: 15px;
 }
 .nav-styling {
   max-width: 800px;
@@ -197,6 +198,7 @@ nav a:active {
   line-height: 1.4;
   text-decoration: none;
   color: #5E6164;
+  margin: 15px;
 }
 footer {
   color: #22283B;
