--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,3 +18,20 @@
     margin: auto;
     text-align: center;
 }
+
+.private-btn(@button-color: blue; @button-text-color: white) {
+    //allow for button color and text color to be set
+    //I'm just hard-coding the rest of the values to be "quick-and-dirty"
+    //but, in a big project with lots of code re-use, 
+    //it could be helpful to even allow stuff like size of button, size of font, etc, to be set by passing params 
+    color: @button-text-color;
+    background-color: @button-color;
+    text-align: center;
+    padding: 10px;
+    //font-size: 20px
+    .generic-text();
+    font-weight: bold;
+    margin: 4px 2px;
+    border-radius: 12px;
+    max-width: 33%;
+}
