hover state for btn

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -60,6 +60,9 @@
       .btn {
         .private-btn(@header-font-color, white);
       }
+      .btn:hover {
+        .private-btn(white; @header-font-color);
+      }
     }
 
     .walk-img {
