--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,18 @@ footer {
   border-radius: 12px;
   max-width: 33%;
 }
+.home .walk .walk-text .btn:hover {
+  color: #23293B;
+  background-color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 1.6rem;
+  line-height: 1.4;
+  font-weight: bold;
+  margin: 4px 2px;
+  border-radius: 12px;
+  max-width: 33%;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
