--- a/css/index.css
+++ b/css/index.css
@@ -252,8 +252,27 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 500px) {
+  .home .walk {
+    display: block;
+  }
+}
+.home .walk .walk-img-mobi {
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  .home .walk .walk-img-mobi {
+    display: block;
+    width: 100%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media screen and (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -314,6 +333,11 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media screen and (max-width: 500px) {
+  .home .walk .walk-img {
+    display: none;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
