--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,8 +56,24 @@
     display: flex;
     justify-content: center;
 
+    @media screen and (max-width: @max-width) {
+      display: block;
+    }
+
+    //if it is in mobile, we want it to display on other side of a chunck of text
+    .walk-img-mobi {
+        display: none;
+        @media screen and (max-width: @max-width) {
+          display: block;  
+          width: 100%;
+        }
+    }
+
     .walk-text {
       width: 50%;
+      @media screen and (max-width: @max-width) {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -74,6 +90,10 @@
         .private-btn(white; @header-font-color);
       }
 
+      //there is a very obnoxious bug with the hover state in mobile: 
+      //I'd disable the mobile hover state for now, then have the fix as a stretch
+      //
+      //do hover states even mean much when the user is navigating with fingers (not mouse)?
       @media screen and (max-width: @max-width) {
         .btn {
           .private-btn(@header-font-color, white, 100%);
@@ -87,6 +107,10 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media screen and (max-width: @max-width) {
+        display: none;  //if it is in mobile, we want it to display on other side of a chunck of text
+      }
       
       img {
         width: 100%;
