I did the MVP wrong: attempting to fix

--- a/css/index.css
+++ b/css/index.css
@@ -334,10 +334,8 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
-@media screen and (max-width: 500px) {
-  .home .walk .walk-img {
-    display: none;
-  }
+.home .walk .walk-img "max-width: 500px" {
+  display: none;
 }
 .home .walk .walk-img img {
   width: 100%;
