--- a/less/variables.less
+++ b/less/variables.less
@@ -26,4 +26,4 @@
 // Mobile var
 @max-width: 500px;
 //@phone: @media screen and (max-width 500px);
-@phone: "max-width: 500px";
+//@phone: "max-width: 500px"; <<< this is how I am supposed to do it, but can't figure out string interpolation
