--- a/css/index.css
+++ b/css/index.css
@@ -334,7 +334,7 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
-@media screen and (max-width: 500px) {
+@media (max-width: 500px) {
   .home .walk .walk-img {
     display: none;
   }
