--- a/less/home-page.less
+++ b/less/home-page.less
@@ -111,7 +111,10 @@
       //@media screen and (max-width: @max-width) {
       //  display: none;  //if it is in mobile, we want it to display on other side of a chunck of text
       //}
-      @media (e(@phone)) {
+      //@media (e(@phone)) {
+      //  display: none;  //if it is in mobile, we want it to display on other side of a chunck of text
+      //}
+      @media @phone {
         display: none;  //if it is in mobile, we want it to display on other side of a chunck of text
       }
       
