--- a/less/home-page.less
+++ b/less/home-page.less
@@ -117,6 +117,9 @@
       @media @phone {
         display: none;  //if it is in mobile, we want it to display on other side of a chunck of text
       }
+      //$phone {
+      //  display: none;
+      //}
       
       img {
         width: 100%;
