--- a/less/home-page.less
+++ b/less/home-page.less
@@ -26,7 +26,7 @@
       height: 100%;
     }
 
-    @media screen and (max-width: @max-width) {
+    @media @phone {
       .blast {
         width: 100%;
       }
@@ -56,14 +56,14 @@
     display: flex;
     justify-content: center;
 
-    @media screen and (max-width: @max-width) {
+    @media @phone {
       display: block;
     }
 
     //if it is in mobile, we want it to display on other side of a chunck of text
     .walk-img-mobi {
         display: none;
-        @media screen and (max-width: @max-width) {
+        @media @phone {
           display: block;  
           width: 100%;
         }
@@ -71,7 +71,7 @@
 
     .walk-text {
       width: 50%;
-      @media screen and (max-width: @max-width){
+      @media @phone{
         width: 100%;
       }
 
@@ -94,7 +94,7 @@
       //I'd disable the mobile hover state for now, then have the fix as a stretch
       //
       //do hover states even mean much when the user is navigating with fingers (not mouse)?
-      @media screen and (max-width: @max-width) {
+      @media @phone {
         .btn {
           .private-btn(@header-font-color, white, 100%);
         }
